# TIme_Tracker

./: .gitignore  INSTALL.md  RANKING_SETUP.md  RELEASE.md  package-lock.json  package.json  privacy-policy.txt  system-requirements.txt
.github/workflows/: release.yml
renderer/: index.html  renderer.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs  state.rs  store.rs  tracker.rs
